--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         content: ".book",
         stylesheet: "css/print.css",
         button: ".printNew",
-        hooks: void 0,
+        hook: void 0,
         features: [
           "pageSize",
           "pageMargins",
@@ -28,7 +28,7 @@
 <button class="printNew">Print button</button>
 
 
-<div class=".book">
+<div id="book">
 
 
     <h1>Hello</h1>
