--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/css/print.css" media="screen">
     <script>
       window.pagedMakerConfig = {
-        content: ".book",
+        content: "#book",
         stylesheet: "css/print.css",
         button: ".printNew",
         hook: void 0,
